# costumizer

./: LICENSE  README.md
costumizer-ui/: .flake8  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  pyproject.toml  scripts.py  vite.config.ts
costumizer-ui/src/: Dockerfile
costumizer-ui/src/backend/: wsgi.py
costumizer-ui/src/backend/costumizer/: __init__.py  auth.py  config.py  database.py  errors.py  skins.py  utils.py
costumizer-ui/src/backend/costumizer/blueprints/: __init__.py  costume.py  error.py  proxy.py  static.py  user.py
costumizer-ui/src/frontend/: App.tsx  index.html  index.scss  index.tsx
costumizer-ui/src/frontend/components/: Identity.tsx
costumizer-ui/src/frontend/components/Card/: styles.module.scss
costumizer-ui/src/frontend/components/FaceRenderer/: index.tsx  styles.module.scss
costumizer-ui/src/frontend/components/Header/: index.tsx  styles.module.scss
costumizer-ui/src/frontend/components/Input/: index.tsx
costumizer-ui/src/frontend/components/LoadingButton/: index.tsx
costumizer-ui/src/frontend/components/Modal/: index.tsx
costumizer-ui/src/frontend/components/RadioButton/: index.tsx
costumizer-ui/src/frontend/components/SkinPreview/: styles.module.scss
costumizer-ui/src/frontend/global/: Identity.tsx
costumizer-ui/src/frontend/global/Card/: index.tsx  styles.module.scss
costumizer-ui/src/frontend/global/Header/: index.tsx  styles.module.scss
costumizer-ui/src/frontend/global/Input/: index.tsx  (+1 more)
costumizer-ui/src/frontend/modals/: UnexpectedError.tsx
costumizer-ui/src/frontend/utils/: Form.ts
(+74 files in other folders)
